Fixed some 'findbugs' issues